<resources>
    <string name="app_name">EezyClinic</string>
    <string name="internet_connection_not_available_msg">Network not available</string>
    <string name="email_send_error_msg">Unable to send email</string>
    <string name="app_tour_page1_msg">Online doctor appointment \nApp for patients</string>
    <string name="app_tour_page2_msg">Upload your documents\nand reports</string>
    <string name="app_tour_page3_msg">Create your own\nhealth goals</string>
    <string name="facebook_app_scrate_key">1a5e517e607fde29849e0cbe50eb0895</string>
    <string name="facebook_app_id">1064409950364350</string>
    <string name="twitter_consumer_key">VFZPsVGKznpPdObUYUGE4DH9w</string>
    <string name="twitter_consumer_secret">M2CDgvWlMoe3l7E5sP7Fe2BLDmfMHocnTjBj3wbgTrFie67VMB</string>
    <string name="linkedin_consumer_key">8139zqkvjdijtm</string>
    <string name="linkedin_consumer_secret">MUWx6kIARfp1r1cK</string>
    <string name="Screen">Normal</string>
    <string name="terms_and_conditions_lbl"><u>Terms and Conditions</u></string>
    <string name="ok_label">Ok</string>
    <string name="action_settings">Settings</string>
    <string name="please_try_again">Please try again</string>
    <string name="invalid_service_response_lbl">Invalid server response, please check your network connectivity</string>
    <string name="default_notification_channel_id">EezyClinic_1</string>
    <string name="default_notification_channel_desc">Smart application uniting Patients, Doctors and Insurance Companies under one Smart Platform</string>
    <string name="account_list_dialog_header_msg">You have multiple accounts registered with this %1$s.\nPlease select the one you want to change the password for:</string>
    <string name="signup_success_msg">Your signup is successful.</string>
    <string name="social_login_header_message">Your %1$s login is successful! Please fill in the mandatory information in the following form:</string>
    <string name="press_again_to_exit">Press again to exit.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="welcome_guest_lbl">Welcome Guest</string>
    <string name="logout_msg">Are you sure, you want to log out?</string>
    <string name="logout_msg_title">Logout</string>
    <string name="success_logout_msg">Logged out successfully!</string>
    <string name="cancel_lbl">Cancel</string>
    <string name="resend_otp_header_lbl">Your account wasn\'t verified, please enter the OTP to verify your account.</string>
    <string name="yes_label">Yes</string>
    <string name="book_appointment_lbl">Book Appointment</string>
    <string name="home_lbl">Home</string>
    <string name="dashboard_lbl">Dashboard</string>
    <string name="my_profile_lbl">My Profile</string>
    <string name="notification_lbl">Notification</string>
    <string name="health_checks_lbl">Health Checks</string>
    <string name="medical_history_lbl">Medical History</string>
    <string name="notes_lbl">Notes</string>
    <string name="family_members_lbl">Family Members</string>
    <string name="appointment_history_lbl">Appointment History</string>
    <string name="tele_consultation_lbl">Tele Consultation</string>
    <string name="request_appointment_lbl">Request Appointment</string>
    <string name="health_records_lbl">Health Records</string>
    <string name="my_account_settings_lbl">My Account Settings</string>
    <string name="feedback_lbl">Feedback</string>
    <string name="features_and_benefits_lbl">Features and benefits</string>
    <string name="logout_lbl">Logout</string>
    <string name="please_enter_name_lbl">Please enter the name</string>
    <string name="please_enter_valid_email_id_lbl">Please enter the email address</string>
    <string name="please_enter_valid_mobile_number_lbl">Please enter the mobile number</string>
    <string name="please_enter_password_lbl">Please enter password</string>
    <string name="please_agree_terms_and_conditions_lbl"><![CDATA[Please agree the Terms & Conditions]]></string>
    <string name="please_enter_valid_user_id_lbl">Please enter a valid user id</string>
    <string name="retry_lbl">Retry</string>
    <string name="close_lbl">Close</string>
    <string name="continue_lbl">Continue</string>
    <string name="no_accounts_found_in_database_lbl">No such account found in the database.</string>
    <string name="unable_to_send_otp_lbl">Cannot send the OTP.\nplease try again</string>
    <string name="invalid_user_details_lbl">Invalid user details.\nplease try again</string>
    <string name="please_enter_valid_otp_lbl">Invalid OTP,please enter correct OTP</string>
    <string name="please_enter_valid_new_enter_password_lbl">Please enter password</string>
    <string name="please_enter_valid_re_enter_password_lbl">Please enter password</string>
    <string name="new_password_and_re_password_should_be_same_lbl">Password and Confirm Password should be same</string>
    <string name="invalid_patient_details_lbl">Invalid patient details,please try again</string>
    <string name="medical_records_lbl">Medical Records</string>
    <string name="settings_lbl">Settings</string>
    <string name="social_signup_msg_lbl">You are successfully logged in </string>
    <string name="normal_signup_or_signin_msg_lbl">You are successfully logged in</string>
    <string name="health_tips_lbl">Health Tips</string>
    <string name="health_goal_lbl">Health Goal</string>
    <string name="upcoming_appointment_lbl">Upcoming Appointment</string>
    <string name="upcoming_folloups_lbl">Upcoming Followups</string>
    <string name="title_activity_health_records">Health Records</string>
    <string name="title_health_records">Health Records</string>
    <string name="title_activity_appointments">Appointments</string>
    <string name="title_activity_upcoming_followups">Followups</string>
    <string name="title_activity_request_appointments">Request Appointments</string>
    <string name="title_activity_search">Search</string>
    <string name="please_enter_valid_location">Please enter valid location name</string>
    <string name="health_goal_empty_msg">You haven’t set up your health goals</string>
    <string name="upcoming_empty_appointment_list_msg">You do not have any upcoming appointments.</string>
    <string name="tele_empty_consultation_list_msg">You do not have any Tele Consultation.</string>
    <string name="request_empty_appointment_list_msg">You do not have any Request Appointment.</string>
    <string name="upcoming_empty_followups_list_msg">You do not have any upcoming followups.</string>
    <string name="title_activity_find_docotor">Find a Doctor</string>
    <string name="no_more_doctors_found_lbl">No more doctor(s) found.</string>
    <string name="title_activity_filter_title">Filter</string>
    <string name="no_more_clinic_found_lbl">No more clinic(s) found.</string>
    <string name="title_activity_find_clinic">Find Clinic</string>
    <string name="header_text">Test header\nTest1\ntest2</string>
    <string name="tab_country">Country</string>
    <string name="tab_continent">Continent</string>
    <string name="tab_city">City</string>
    <string name="tab_scroll_view">Scroll View</string>
    <string name="demo_min_label">min</string>
    <string name="demo_max_label">max</string>
    <string name="showDetails">Show Details</string>
    <string name="proceedtomakepayment">Proceed to Make Payment</string>
    <string name="sample_txt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="search_doctors_lbl">Search for Doctor/Clinic</string>
    <string name="search_result_doctors_lbl">Search Result - Doctors</string>
    <string name="search_result_clinic_lbl">Search Result – Clinics</string>
    <string name="view_doctors_lbl">View Doctors</string>
    <string name="no_matching_resuly_lbl">There are no matching results</string>
    <string name="no_reviews_yet_lbl">Reviews from verified patients not received,\nGive your feedback</string>
    <string name="claer_filter_message_lbl">Are you sure you want to clear the filters?</string>
    <string name="press_again_to_exit_from_search">Press again to exit from the search.</string>
    <string name="unable_to_get_insurance_list_lbl">Something went wrong in fetching Insurance List from server, please try again</string>
    <string name="unable_to_get_id_type_list_lbl">Something went wrong in fetching Id type List from server, please try again</string>
    <string name="unable_to_get_nationality_list_lbl">Something went wrong in fetching Nationality from server, please try again</string>
    <string name="unable_to_get_languages_list_lbl">Something went wrong in fetching languages list from server, please try again</string>
    <string name="unable_to_get_speciality_list_lbl">Something went wrong in fetching Insurance List from server, please try again</string>
    <string name="network_not_available_lbl">Network not available</string>
    <string name="no_time_slots_available_lbl">No booking available for this day</string>
    <string name="unable_to_get_country_list_lbl">Unable to get country list. please try again</string>
    <string name="no_upcoming_appointments_lbl">You do not have any upcoming appointment</string>
    <string name="new_appointment_lbl">New Appointment</string>
    <string name="you_need_to_insert_sd_card">Please insert the SD card</string>
    <string name="sorry_your_device_doesnot_support_the_crop_action">Phone device does not support the crop action</string>
    <string name="image_crop_error">Image cropping error</string>
    <string name="directory_name">Eezyclinic</string>
    <string name="alert_lbl">Alert</string>
    <string name="write_on_sd_card_permission_required_msg">Write on SD card permission required</string>
    <string name="camera_permission_required_msg">Camera permission required</string>
    <string name="internet_permission_required_msg">Internet permission required</string>
    <string name="unable_to_get_patient_profile_lbl">Unable to get patient profile, please try again.</string>
    <string name="unable_to_save_profile_details_lbl">Unable to save Profile details,please try again.</string>
    <string name="unable_to_get_privacySettings_lbl">Unable to get privacy settings,please try again.</string>
    <string name="unable_to_change_password_lbl">Unable to change password,please try again</string>
    <string name="unable_to_mobile_number_lbl">Unable to change mobile number,please try again</string>
    <string name="unable_to_get_prescriptions_list_lbl">Unable to get Prescriptions List, please try again.</string>
    <string name="no_prescriptions_lbl">No prescription(s)</string>
    <string name="unable_to_get_reports_list_lbl">Unable to get  reports list, please try again.</string>
    <string name="unable_to_get_casesheets_list_lbl">Unable to get Casesheets, please try again</string>
    <string name="unautherized_user_details_lbl">Something went to wrong with patient data.please try again.</string>
    <string name="unable_to_change_emailid_lbl">Unable to change emai id, please try again</string>
    <string name="edit_lbl">Edit</string>
    <string name="print_lbl">Print</string>
    <string name="download_lbl">Download</string>
    <string name="delete_lbl">Delete</string>
    <string name="printing_not_supported_device_lbl">Printing not supported on this device</string>
</resources>